[package]
name = "dynorow"
version = "0.1.3"
edition = "2024"
description = "Strongly typed, derive-based models and expression builders for Amazon DynamoDB."
repository = "https://github.com/Salman-Sali/dynorow"
readme = "Readme.md"
license = "MIT"
keywords = ["aws", "dynamodb", "database"]

[dependencies]
dynorow_derive = { workspace = true }
aws-sdk-dynamodb = "1.86.0"
thiserror = "2.0.12"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
serde_dynamo = "4.2.14"
tokio = { version = "1", features = ["macros"] }
async-recursion = "1.1.1"
rand = "0.9.2"
futures = "0.3.31"

[workspace]
members = ["dynorow_derive", "examples/signup"]

[workspace.dependencies]
dynorow_derive = { path = "./dynorow_derive" }
dynorow = { path = "." }
